--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,9 @@ section{
 }
 .left-description{
     color: rgb(90, 90, 93);
-    font-size: 1rem;
-    font-weight: 400;
+    font-size: 1.1rem;
+    font-weight: 500;
+    line-height: 30px;
 }
 .center-description{
     color: rgba(19, 19, 24, 0.7);
@@ -40,7 +41,6 @@ span{
 .btn{
     width: 170px;
     height: 50px;
-    margin: 0 5px;
     border: 1px solid rgb(255, 84, 0);
     border-radius: 8px;
     padding: 0 10px;
@@ -124,7 +124,7 @@ span{
 input[type="text"]{
     width: 170px;
     height: 50px;
-    margin: 0 5px;
+    margin-right: 10px;
     border: none;
     border-radius: 8px;
     padding: 0 10px;
@@ -136,7 +136,7 @@ input[type="text"]{
 .banner-form > select{
     width: 170px;
     height: 50px;
-    margin: 0 5px;
+    margin-right: 10px;
     border: none;
     border-radius: 8px;
     padding: 0 10px;
@@ -148,9 +148,22 @@ input[type="text"]{
 .banner-form > input:focus, select:focus{
     outline: none;
 }
-
-
 /* Banner section ends here */
+
+/* Popular section starts here */
+.popular{
+    display: flex;
+    justify-content: space-between;
+    margin: 125px 0;
+
+}
+.popular-content{
+    width: 50%;
+}
+.popular-title{
+    margin-top: 0;
+}
+/* Popular section ends here */
 
 
 
@@ -168,6 +181,9 @@ input[type="text"]{
     }
     .nav-brands{
         gap: 0px;
+    }
+    .banner{
+        padding-bottom: 50px;
     }
     .banner-container{
         padding: 20px;
@@ -191,6 +207,16 @@ input[type="text"]{
         width: 244px;
         margin-bottom: 15px;
     }
+    .popular{
+        flex-direction: column;
+        gap: 25px;
+    }
+    .popular-content{
+        width: 100%;
+    }
+    .popular-img img{
+        width: 100%;
+    }
    
 }
 
@@ -200,6 +226,9 @@ input[type="text"]{
     .navbar, .nav-brands, .nav-links{
         gap: 20px;
     }
+    .navbar, .banner, .popular{
+        padding: 0 25px;
+    }
     .nav-links{
         margin-right: 10px;
     }
@@ -207,6 +236,7 @@ input[type="text"]{
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 0 25px;
     }
     .banner-title{
         font-size: 3rem;
@@ -221,5 +251,15 @@ input[type="text"]{
     input[type="text"]{
         width: 481px;
         margin-bottom: 15px;
+    }
+    .popular{
+        flex-direction: column;
+        gap: 25px;
+    }
+    .popular-content{
+        width: 100%;
+    }
+    .popular-img img{
+        width: 100%;
     }
 }
