--- a/styles/style.css
+++ b/styles/style.css
@@ -16,11 +16,13 @@ section{
     font-size: 2.5rem;
     font-weight: 800;
     color: rgb(19, 19, 24);
+    line-height: 30px;
 }
 .center-title{
     font-size: 2.5rem;
     font-weight: 800;
     text-align: center;
+    line-height: 30px;
     color: rgb(19, 19, 24);
 }
 .left-description{
@@ -31,7 +33,7 @@ section{
 }
 .center-description{
     color: rgba(19, 19, 24, 0.7);
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 400;
     text-align: center;
 }
@@ -154,7 +156,7 @@ input[type="text"]{
 .popular{
     display: flex;
     justify-content: space-between;
-    margin: 125px 0;
+    margin: 150px 0;
 
 }
 .popular-content{
@@ -165,7 +167,36 @@ input[type="text"]{
 }
 /* Popular section ends here */
 
-
+/* Destination section starts here */
+.row-1, .row-2, .row-3{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+.row-2{
+    grid-template-columns: 0.9fr 1.5fr 0.6fr;
+}
+.row-3{
+    grid-template-columns: 0.8fr 1.2fr;
+}
+.country-card{
+    position: relative;
+}
+.country-name{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%, -50%);
+    font-size: 28px;
+    font-weight: 800;
+}
+.country-img{
+    width: 100%;
+    height: 400px;
+    filter: brightness(85%);
+}
+/* Destination section ends here */
 
 
 
@@ -217,6 +248,9 @@ input[type="text"]{
     .popular-img img{
         width: 100%;
     }
+    .row-1, .row-2, .row-3{
+        grid-template-columns: 1fr;
+    }
    
 }
 
@@ -261,5 +295,8 @@ input[type="text"]{
     }
     .popular-img img{
         width: 100%;
+    }
+    .row-1, .row-2, .row-3{
+        grid-template-columns: 1fr;
     }
 }
