--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,7 @@ span{
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.3);
     padding: 25px;
+    backdrop-filter: blur(5px);
 }
 input[type="text"]{
     width: 170px;
@@ -246,6 +247,82 @@ input[type="text"]{
 }
 /* Choose section ends here */
 
+/* Discount section starts here */
+.discount-container{
+    height: 500px;
+    background-image: url("../images/card-8.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 15px;
+    position: relative;
+    margin-bottom: 25px;
+}
+.discount-sub-heading-container{
+    display: flex;
+    gap: 30px;
+}
+.discount-content{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 50px;
+    position: absolute;
+    top: 33px;
+    right: 33px;
+    border-radius: 15px;
+    border: 2px solid rgb(255, 255, 255);
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.8);
+}
+.discount-sub-heading-content{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: white;
+}
+.discount-sub-heading-content-title, .content-description{
+    color: rgb(90, 90, 93);
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+.discount-icon{
+    color: var(--primary-color);
+}
+.disconunt-title{
+    color: rgb(19, 19, 24);
+    font-size: 1.5rem;
+    font-weight: 800;
+    line-height: 0;
+}
+.content-price{
+    color: var(--primary-color);
+    font-size: 20px;
+    font-weight: 800;
+    }
+#discount-container-2{
+    background-image: url("../images/card-9.png");
+}
+#discount-content-2{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 50px;
+    position: absolute;
+    top: 33px;
+    left: 33px;
+    border-radius: 15px;
+    border: 2px solid rgb(255, 255, 255);
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.8);
+}
+#discount-btn{
+    text-align: center;
+}
+/* Discount section ends here */
+
 /*============== Responsive design starts here================== */
 
 /* For mobile */
@@ -303,6 +380,19 @@ input[type="text"]{
     .choose-row-2{
         width: 100%;
     }
+    .discount-container{
+        padding-bottom: 130px;
+    }
+    .discount-content, #discount-content-2{
+        width: 70%;
+        padding: 20px;
+        position: absolute;
+
+    }
+    .discount-sub-heading-container{
+    flex-direction: column;
+    gap: 0;
+    }
    
 }
 
@@ -312,7 +402,7 @@ input[type="text"]{
     .navbar, .nav-brands, .nav-links{
         gap: 20px;
     }
-    .navbar, .banner, .popular,.destination, .choose{
+    .navbar, .banner, .popular,.destination, .choose, .discount{
         padding: 0 25px;
     }
     .nav-links{
@@ -356,5 +446,21 @@ input[type="text"]{
     }
     .choose-row-2{
         width: 100%;
+    }
+    .discount-container{
+        padding-bottom: 70px;
+    }
+    .discount-content, #discount-content-2{
+        width: 70%;
+        padding: 20px;
+        position: absolute;
+
+    }
+    .discount-sub-heading-container{
+    flex-direction: column;
+    gap: 0;
+    }
+    .btn{
+        max-width: 100%;
     }
 }
