--- a/styles/style.css
+++ b/styles/style.css
@@ -390,6 +390,36 @@ span{
 
 /* Newsletter section ends here */
 
+/* Footer section starts here */
+.footer{
+    margin-top: 150px;
+    text-align: center;
+    background: rgba(19, 19, 24, 0.05);
+    padding: 50px 100px;
+}
+.footer-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    font-size: 2rem;
+    font-weight: 800;
+    line-height: 20px;
+}
+.social a{
+    color: rgb(31, 31, 31);
+}
+.social i{
+    font-size: 1.5rem;
+    margin: 0 15px;
+    cursor: pointer;
+}
+.copy{
+    margin-top: 0;
+}
+
+/* Footer section ends here */
+
 /*============== Responsive design starts here================== */
 
 /* For mobile */
@@ -482,7 +512,9 @@ span{
     .btn{
         width: 100%;
     }
-   
+    .footer{
+        padding: 20px;
+    }
 }
 
 
