--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,13 @@ section{
     font-size: 2.5rem;
     font-weight: 800;
     color: rgb(19, 19, 24);
-    line-height: 30px;
+    line-height: 40px;
 }
 .center-title{
     font-size: 2.5rem;
     font-weight: 800;
     text-align: center;
-    line-height: 30px;
+    line-height: 40px;
     color: rgb(19, 19, 24);
 }
 .left-description{
@@ -400,7 +400,7 @@ span{
     gap: 25px;
     font-size: 2rem;
     font-weight: 800;
-    line-height: 20px;
+    line-height: 50px;
 }
 .social a{
     color: rgb(31, 31, 31);
@@ -447,12 +447,14 @@ span{
     flex-direction: column;
     align-items: center;
 }
-input[type="text"]{
-    width: 224px;
+.banner-form > input[type="text"]{
+    width: 90%;
+    margin: 0;
     margin-bottom: 10px;
 }
-.banner-form > select, .btn{
-    width: 244px;
+.banner-form > select{
+    width: 99%;
+    margin: 0;
     margin-bottom: 15px;
 }
 .popular{
@@ -511,6 +513,10 @@ input[type="text"]{
 .footer{
     padding: 20px;
 }
+.social i{
+    font-size: 1.2rem;
+
+}
 }
 
 
@@ -526,9 +532,6 @@ input[type="text"]{
     margin-right: 10px;
 }
 .banner-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 0 25px;
 }
 .banner-title{
@@ -541,9 +544,19 @@ input[type="text"]{
     width: 501px;
     margin-bottom: 10px;
 }
-input[type="text"]{
-    width: 481px;
+.banner-form > input[type="text"]{
+    width: 96%;
+    margin: 0;
     margin-bottom: 15px;
+    margin-top: 10px;
+}
+.banner-form > select{
+    width: 100%;
+    margin: 0;
+    margin-bottom: 15px;
+}
+.btn{
+    width: 100%;
 }
 .popular{
     flex-direction: column;
@@ -596,6 +609,6 @@ input[type="text"]{
     grid-template-columns: 1fr;
 }
 .newsletter-form > input{
-    width: 90%;
+    width: 95%;
 }
 }
